<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_menu"
            app:title="@string/feedback" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintWidth_max="@dimen/with_layout_min_margin">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/grid_2"
            android:background="?colorSurface"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_feedback_description"
                style="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:lineSpacingExtra="@dimen/spacing_body_text"
                android:text="@string/feedback_description"
                android:textAlignment="viewStart" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edl_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/your_comments"
                    android:lines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_3"
                android:text="@string/send_feedback" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
