<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@android:color/white">

    <TextView
        android:id="@+id/tv_app_name"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_3"
        android:layout_marginTop="@dimen/grid_3"
        android:text="@string/export"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_drop"
        style="?attr/iconButtonStyle"
        android:layout_width="@dimen/standard_icon_size"
        android:layout_height="@dimen/standard_icon_size"
        android:layout_marginEnd="@dimen/grid_3"
        app:layout_constraintBottom_toBottomOf="@id/tv_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_app_name"
        app:srcCompat="@drawable/ic_drop_down" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_3"
        android:layout_marginTop="@dimen/grid_3"
        android:layout_marginEnd="@dimen/grid_3"
        android:hint="@string/name"
        app:layout_constraintWidth_max="@dimen/with_layout_min_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_export_now"
        app:icon="@drawable/ic_save"
        app:iconSize="@dimen/standard_icon_size"
        style="?attr/materialButtonStyle"
        app:iconGravity="textStart"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_button"
        android:layout_marginTop="@dimen/grid_4"
        android:layout_marginBottom="@dimen/grid_3"
        android:text="@string/save_as"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tl_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tl_name"
        app:layout_constraintTop_toBottomOf="@id/tl_name"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginTop="@dimen/grid_3" />
</androidx.constraintlayout.widget.ConstraintLayout>

