<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ab_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorSurface"
            app:navigationIcon="@drawable/ic_menu"
            app:title="@string/settings"
            app:titleTextColor="?colorOnSurface" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nv_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/linear_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/grid_2"
            android:background="?colorSurface"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/grid_3"
            android:paddingVertical="@dimen/grid_2">

            <FrameLayout
                android:id="@+id/fl_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_language"
                    style="?textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/grid_3"
                    android:layout_marginStart="@dimen/grid_2"
                    android:text="@string/language" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_language"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="50dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/tmp_myanmar" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/small_icon_size"
                    android:layout_height="@dimen/small_icon_size"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/grid_2"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_more_next" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:drawable/divider_horizontal_bright" />

            <FrameLayout
                android:id="@+id/fl_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground">

                <TextView
                    android:id="@+id/tv_currency"
                    style="?textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/grid_3"
                    android:layout_marginStart="@dimen/grid_2"
                    android:text="@string/choose_currency" />

                <TextView
                    android:id="@+id/tv_currency_value"
                    style="?textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="50dp"
                    tools:text="$" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/small_icon_size"
                    android:layout_height="@dimen/small_icon_size"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/grid_2"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_more_next" />
            </FrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
